# brain

./: .gitignore  README.md  brain.fish  brain.py  completion.py  config.py  constants.py  logic.py  pyproject.toml  settings.json  settings.py
.tmp_home/.config/fish/completions/: brain.fish
brain/: __main__.py  cli.py  config.py  constants.py  logic.py  paths.py  settings.py
brain/commands/: add.py  completions.py  edit.py  install_completions.py  list.py  remove.py  rename.py  see.py  setup.py  think.py
brain/links/: __init__.py  graph.py  normalize.py  parse.py
commands/: add.py  complete_edit.py  completions.py  edit.py  install_completion.py  install_completions.py  list.py  remove.py  rename.py  see.py
scripts/: bootstrap.sh  setup.sh
tests/: test_links.py
