[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brain"
version = "0.1.3"
description = "Ultra simple CLI to manage a list of markdown notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*"]
